[tool.poetry]
name = "machine-learning-flask"
version = "0.1.0"
description = ""
authors = ["yusuke <ritchie.deep.purple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
